# uomasm

./: CMakeLists.txt  README.txt
doc/html/: index.html  installing_uomasm.html  notes.txt
doc/html/tutorial/: masm_tutorial1.html  masm_tutorial2.html
examples/: README.txt
examples/models/: draw_mean_model.params  face_68pts.crvs  make_asm_series.params  notes.txt  series_search.params  test_search_on_trn.params
examples/points_68/: 107_0785.pts
masm/: CMakeLists.txt  introduction_doxy.txt  masm_add_all_loaders.cxx  masm_add_all_loaders.h  masm_bldr_add_all_loaders.cxx  masm_bldr_add_all_loaders.h  masm_builder.cxx  masm_builder.h  masm_finder_set_builder.cxx  masm_finder_set_builder.h  masm_grad_corr_builder.cxx  masm_grad_corr_builder.h  masm_grad_corr_finder.cxx  masm_grad_corr_finder.h  masm_grad_corr_model.cxx  masm_grad_corr_model.h  masm_lin_reg_builder.cxx  masm_lin_reg_builder.h  masm_lin_reg_finder.cxx  masm_lin_reg_finder.h  masm_lin_reg_model.cxx  masm_lin_reg_model.h  masm_local_frame_maker.cxx  masm_local_frame_maker.h  masm_model.cxx  masm_model.h  masm_model_series.cxx  masm_model_series.h  masm_ncc_finder.cxx  masm_ncc_finder.h  masm_ncc_finder_builder.cxx  masm_ncc_finder_builder.h  masm_ncc_finder_model.cxx  masm_ncc_finder_model.h  masm_point_finder.cxx  masm_point_finder.h  masm_point_finder_builder.cxx  masm_point_finder_builder.h  masm_point_finder_model.cxx  masm_point_finder_model.h  (+11 more)
masm/doc/html/: index.html  installing_uomasm.html  masm_overview.html  masm_tools_overview.html  notes.txt
masm/tests/: CMakeLists.txt  test_driver.cxx  test_grad_corr_finder.cxx  test_lin_reg_finder.cxx  test_ncc_finder.cxx  test_region_pdf_finder.cxx
masm/tools/: CMakeLists.txt  masm_build_asm.cxx  masm_draw_mean_model.cxx  masm_make_asm_series.cxx  masm_search_image.cxx  masm_series_search.cxx  masm_test_search.cxx
qasm/: CMakeLists.txt  introduction_doxy.txt  qasm_searcher_widget.cxx  qasm_searcher_widget.h
qasm/tools/: CMakeLists.txt  qasm_markup_tool.cxx  qasm_markup_tool.h
