#
# ./uomasm/CMakeLists.txt
#

PROJECT(UoMASM)

OPTION(BUILD_UoMASM_QASM "Should the qasm libraries in UoMASM be built?" NO)


SET( UOMASM_INCLUDE_DIR ${UoMASM_SOURCE_DIR} CACHE STATIC "Core UoMASM library include files" )

INCLUDE_DIRECTORIES(${VXL_CORE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${VXL_MUL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${UOMASM_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${UOMQVXL_INCLUDE_DIR})

SUBDIRS(masm)

IF (BUILD_UoMASM_QASM)
 INCLUDE(${CMAKE_ROOT}/Modules/FindQt4.cmake)
 INCLUDE(${QT_USE_FILE}) 
 SUBDIRS(qasm)
ENDIF (BUILD_UoMASM_QASM)
